remade figure 2, more work on using VICET to bound LOAM error when s ststarting from a moving platform

--- a/v3/point_cloud_rectification/test_gazebo_data.ipynb
+++ b/v3/point_cloud_rectification/test_gazebo_data.ipynb
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2baac96a",
+   "id": "64435607",
    "metadata": {},
    "source": [
     "# Generate relative distortion figures\n"
@@ -306,14 +306,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
-   "id": "5a2675c0",
+   "execution_count": 240,
+   "id": "04424259",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "307c1d95c4d640f89370bdeee51b243a",
+       "model_id": "07fc1b21b9b64a6a8c7f00c84dc5d240",
        "version_major": 2,
        "version_minor": 0
       },
@@ -326,8 +326,12 @@
     }
    ],
    "source": [
-    "fn1 = \"/home/derm/ASAR/v3/point_cloud_rectification/sample_data/paper_figures/relative_distortion_fig/raw_frame_1.npy\"\n",
-    "fn2 = \"/home/derm/ASAR/v3/point_cloud_rectification/sample_data/paper_figures/relative_distortion_fig/raw_frame_3.npy\"\n",
+    "# fn1 = \"/home/derm/ASAR/v3/point_cloud_rectification/sample_data/paper_figures/relative_distortion_fig/raw_frame_1.npy\"\n",
+    "# fn2 = \"/home/derm/ASAR/v3/point_cloud_rectification/sample_data/paper_figures/relative_distortion_fig/raw_frame_3.npy\"\n",
+    "\n",
+    "fn1 = \"/home/derm/ASAR/v3/point_cloud_rectification/sample_data/paper_figures/relative_distortion_fig/raw_frame_v2_1.npy\"\n",
+    "fn2 = \"/home/derm/ASAR/v3/point_cloud_rectification/sample_data/paper_figures/relative_distortion_fig/raw_frame_v2_3.npy\"\n",
+    "\n",
     "pc1 = np.load(fn1)\n",
     "pc2 = np.load(fn2)\n",
     "\n",
@@ -339,8 +343,8 @@
     "# print(stretchvec)\n",
     "# pc2[:,0] = pc2[:,0] * stretchvec\n",
     "\n",
-    "#remove points at the beginning of scan 2 (Debug)\n",
-    "pc2[-1000:,0][pc2[-1000:,2] > -1.5] += 6\n",
+    "# #remove points at the beginning of scan 2 (Debug)\n",
+    "# pc2[-1000:,0][pc2[-1000:,2] > -1.5] += 6\n",
     "\n",
     "#remove inf values \n",
     "pc1[pc1>10000] = 0\n",
@@ -348,8 +352,8 @@
     "pc2[pc2>10000] = 0\n",
     "pc2[pc2<-10000] = 0\n",
     "\n",
-    "# # translate scan2 to align with 1\n",
-    "# pc2[:,0] += 1\n",
+    "# translate scan2 to align with 1\n",
+    "pc2[:,0] += 3.5\n",
     "\n",
     "#remove ground planes\n",
     "pc1 = pc1[pc1[:,2] > -1.5]\n",
@@ -359,11 +363,14 @@
     "settings.useParallelProjection = True #makes view orthographic,\n",
     "disp=[]\n",
     "\n",
-    "alph = 0.2\n",
-    "radius = 2.5\n",
-    "disp.append(Points(pc1, c = \"#CB2314\", r = radius, alpha = alph)) #red\n",
-    "# disp.append(Points(pc1, c = [255,64,64], r = 1, alpha = 1)) #red\n",
-    "disp.append(Points(pc2, c = \"#2c7c94\", r = radius, alpha = alph)) #blue\n",
+    "alph = 1\n",
+    "radius = 2\n",
+    "redCloud = Points(pc1, c = \"#CB2314\", r = radius, alpha = alph).renderPointsAsSpheres(False)\n",
+    "disp.append(redCloud)\n",
+    "blueCloud = Points(pc2, c = \"#2c7c94\", r = radius, alpha = alph).renderPointsAsSpheres(False)\n",
+    "disp.append(blueCloud)\n",
+    "\n",
+    "\n",
     "plt.show(disp, \"Relative Distortion Example\")\n",
     "ViewInteractiveWidget(plt.window)"
    ]
@@ -371,7 +378,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2867fdcb",
+   "id": "7f48d69d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "43be3ff3",
    "metadata": {},
    "outputs": [],
    "source": []
