finished 3D figure for LOAM vs VICET trajectory on 05

--- a/v3/point_cloud_rectification/12 State Solution.ipynb
+++ b/v3/point_cloud_rectification/12 State Solution.ipynb
@@ -124,19 +124,20 @@
     "# # m_hat = np.array([0., 0., 0., 0., 0., 0.0]) #actual motion\n",
     "# m_hat = np.array([-3., 0., 0., 0., 0., 0.1]) #test wrap around\n",
     "\n",
-    "# # movement in x\n",
-    "# old_cloud =  np.load(\"sample_data/paper_figures/case2/raw_frame_3.npy\") \n",
+    "# movement in x\n",
+    "old_cloud =  np.load(\"sample_data/paper_figures/case2/raw_frame_3.npy\") \n",
     "# m_hat = np.array([3, 0, 0., 0., 0., 0])\n",
-    "# # m_hat = np.array([3., 0, 0., 0., 0., -0.2]) #FOR DEBUG-- deform just a little\n",
-    "# gt =  np.load(\"sample_data/paper_figures/case2/base_vel_2.npy\")\n",
+    "m_hat = np.array([0, 0, 0., 0., 0., 0])\n",
+    "# m_hat = np.array([3., 0, 0., 0., 0., -0.2]) #FOR DEBUG-- deform just a little\n",
+    "gt =  np.load(\"sample_data/paper_figures/case2/base_vel_2.npy\")\n",
     "\n",
-    "# movement in x, y, & yaw\n",
-    "old_cloud =  np.load(\"sample_data/paper_figures/case3/raw_frame_1.npy\") \n",
-    "# m_hat = np.array([3, -1, 0., 0., 0., -1])\n",
-    "# m_hat = np.array([3, -1, 0., 0., 0., -0.86]) #FOR DEBUG-- deform a little extra\n",
-    "m_hat = np.array([3., -1., 0., 0., 0., -0.5]) #FOR DEBUG\n",
-    "gt =  np.load(\"sample_data/paper_figures/case3/base_vel_2.npy\")\n",
-    "# print(gt) \n",
+    "# # movement in x, y, & yaw\n",
+    "# old_cloud =  np.load(\"sample_data/paper_figures/case3/raw_frame_1.npy\") \n",
+    "# # m_hat = np.array([3, -1, 0., 0., 0., -1])\n",
+    "# # m_hat = np.array([3, -1, 0., 0., 0., -0.86]) #FOR DEBUG-- deform a little extra\n",
+    "# m_hat = np.array([3., -1., 0., 0., 0., -0.5]) #FOR DEBUG\n",
+    "# gt =  np.load(\"sample_data/paper_figures/case3/base_vel_2.npy\")\n",
+    "# # print(gt) \n",
     "\n",
     "# period_lidar = 1\n",
     "# t_scale = (2*np.pi)/(-m_hat[-1] + (2*np.pi/period_lidar))\n",
@@ -178,9 +179,9 @@
     "\n",
     "#set ground truth RIGID transform between clouds\n",
     "# X_gt = np.array([0, 0., 0.0, 0.0, 0.0, 0.0])\n",
-    "# X_gt = np.array([1.5, 0.5, 0.03, 0.03, 0.03, 0.25])\n",
+    "X_gt = np.array([1.5, 0.5, 0.03, 0.03, 0.03, 0.0625])\n",
     "# X_gt = np.array([1.5, -3, 0.1, 0.2, 0.03, -0.15])\n",
-    "X_gt = np.array([-1., 0., 0.0, 0., 0., 0.])\n",
+    "# X_gt = np.array([-1., 0., 0.0, 0., 0., 0.03])\n",
     "\n",
     "# add noise\n",
     "old_cloud += 0.01*np.random.randn(np.shape(old_cloud)[0], 3)\n",
@@ -216,9 +217,15 @@
     "\n",
     "plt = Plotter(N = 1, axes = 4, bg = (1, 1, 1), interactive = True)\n",
     "disp=[]\n",
-    "disp.append(Points(old_cloud, c = \"#2c7c94\", alpha = 0.5)) #CB2314\n",
-    "# disp.append(Points(old_cloud[:4000], c = \"#CB2314\")) \n",
-    "disp.append(Points(new_cloud, c = \"#CB2314\", alpha = 0.5)) #2c7c94\n",
+    "\n",
+    "# #COLOR new_cloud POINTS BY ORDER IN CLOUD ~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "# color = 255*np.linspace(0,1,len(new_cloud))\n",
+    "# cname = np.array([255-color//2, color, 255-color]).T.tolist()\n",
+    "# disp.append(Points(new_cloud, c = cname, r = 3, alpha = 1))\n",
+    "# # ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
+    "\n",
+    "disp.append(Points(old_cloud, c = \"#2c7c94\", alpha = 0.5)) #blue \n",
+    "disp.append(Points(new_cloud, c = \"#CB2314\", alpha = 0.5)) #red\n",
     "plt.show(disp, \"raw point clouds\")\n",
     "ViewInteractiveWidget(plt.window)"
    ]
@@ -356,7 +363,7 @@
    "execution_count": null,
    "id": "30cbbc70",
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [],
    "source": [
@@ -369,6 +376,17 @@
     "dc = LC(cloud1 = new_cloud, cloud2 = old_cloud, fid = 50, niter = 50, \n",
     "        draw = True, mnp = 25, RM = False, solver = '12_state', \n",
     "        max_buffer = 2.5, A0 = A0)\n",
+    "\n",
+    "#NOTE: if sensor is  spinning in the wrong direction, correction factor will get PC's to align BUT\n",
+    "#      motion distortion and rigid  transform values will be incorrect\n",
+    "\n",
+    "# new_cloud_flipped = np.flip(new_cloud, axis = 0)\n",
+    "# old_cloud_flipped = np.flip(old_cloud, axis = 0)\n",
+    "# dc = LC(cloud1 = new_cloud_flipped, cloud2 = old_cloud_flipped, fid = 50, niter = 50, \n",
+    "#         draw = True, mnp = 25, RM = False, solver = '12_state', \n",
+    "#         max_buffer = 2.5, A0 = A0)\n",
+    "\n",
+    "\n",
     "ViewInteractiveWidget(dc.plt.window)"
    ]
   },
