data generation for static start figures

--- a/v3/point_cloud_rectification/Experiment 1.ipynb
+++ b/v3/point_cloud_rectification/Experiment 1.ipynb
@@ -547,14 +547,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 73,
    "id": "e44b906c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c6a73300900c4fe8ab88e3f56283bb5e",
+       "model_id": "4b05bdcacb7b45248d829e0aea1fd158",
        "version_major": 2,
        "version_minor": 0
       },
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 74,
    "id": "38b38be7",
    "metadata": {},
    "outputs": [],
@@ -715,7 +715,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 75,
    "id": "97b7c8da",
    "metadata": {},
    "outputs": [
@@ -1699,10 +1699,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb1b46c5790>"
+       "<matplotlib.legend.Legend at 0x7fb09c03b850>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1751,7 +1751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 76,
    "id": "19a2016d",
    "metadata": {},
    "outputs": [
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 77,
    "id": "207e436b",
    "metadata": {},
    "outputs": [
@@ -2764,10 +2764,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7fb0a492e5e0>"
+       "<matplotlib.legend.Legend at 0x7fb0a7fbffd0>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2790,7 +2790,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "b2dfaab1",
+   "id": "d3f1a9e1",
    "metadata": {},
    "outputs": [
     {
@@ -2817,7 +2817,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c3db2bf",
+   "id": "5851d4c8",
    "metadata": {},
    "outputs": [],
    "source": []
